--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<app-cinema-theatre ></app-cinema-theatre>
+<router-outlet></router-outlet>
+
