--- a/src/app/components/cinema-theatre/cinema-theatre.component.scss
+++ b/src/app/components/cinema-theatre/cinema-theatre.component.scss
@@ -13,3 +13,12 @@
     font-size: 0.4cm; 
     color: #080977;
 }
+
+.ul{
+    margin:0 0 2em 4em;
+}
+
+.col {
+    margin:0em 30em 0em 30em;
+    background: #2885C4;
+}
