--- a/src/app/components/welcomepage/welcomepage.component.html
+++ b/src/app/components/welcomepage/welcomepage.component.html
@@ -1,11 +1,28 @@
+<div class="col">
 <h1 align="center" class="header">Welcome to our site about cinemas and theaters</h1>
+</div>
 
-<div >
-
+<div>
+  
+  
   <nav>
-    <a class="link1" routerLink='/cinemas'>Cinemas</a>
+    <div class="container">
+      <a class="link1" routerLink='/cinemas'>Cinemas</a>
+    </div>
+    <div class="space"></div>
+    <div class="containerr">
+        <a class="link1" >Theatre</a>
+    </div>
   </nav>
 
+  <div>
+    <div class="imageCinema">
+      <img style="width: 220px;height: 250px;" src="https://thumb1.shutterstock.com/display_pic_with_logo/1797392/496599010/stock-vector-movie-cinema-premiere-poster-design-vector-template-banner-for-show-with-curtains-seats-popcorn-496599010.jpg" alt="">
+    </div>
+    <div class="space1"></div>
+    <div class="imageTheatre">
+        <img style="width: 220px;height: 250px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/71/Palais_Garnier._December_5%2C_2010.jpg/350px-Palais_Garnier._December_5%2C_2010.jpg" alt="">
+      </div>
 
-
+  </div>
 </div>
