--- a/src/app/components/cinema-theatre/cinema-theatre.component.html
+++ b/src/app/components/cinema-theatre/cinema-theatre.component.html
@@ -1,8 +1,10 @@
 <div>
 
+  <div class="col">
     <h2 align="center" class="header">Cinemas</h2>
+  </div>
 
-    <ul *ngFor="let cinema of cinemas" type="square"> 
+    <ul *ngFor="let cinema of cinemas" type="square" class="ul" > 
       <li><p><span class="cinema1"> {{cinema.name}}</span> <br> <span class="cinema2">({{cinema.address}}, {{cinema.description}}, {{cinema.rating}})  </span> </p> </li>
         
     </ul>
