--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 body{
-    background-color: rgb(97, 176, 228);
+    background-color:#2E9CE6;
 }
+
