--- a/src/app/components/welcomepage/welcomepage.component.html
+++ b/src/app/components/welcomepage/welcomepage.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="space"></div>
     <div class="containerr">
-        <a class="link1" >Theatre</a>
+        <a class="link1" routerLink='/theatres'>Theatre</a>
     </div>
   </nav>
 
