--- a/src/app/components/welcomepage/welcomepage.component.html
+++ b/src/app/components/welcomepage/welcomepage.component.html
@@ -1,6 +1,25 @@
-<div class="col">
-<h1 align="center" class="header">Welcome to our site about cinemas and theaters</h1>
+<div>
+ 
+  <div class="col">
+    <h1 align="center" class="header">Welcome to our site about cinemas and theaters</h1>
+  </div>
+  <div class="space2"></div>
+  <div class="login">
+    <div>
+        <button class="button" onclick="location.href='/login'">Login</button>
+       
+    </div>
+    <div class="space3"></div>
+    <div>
+        <button class="button" onclick="location.href='/login'">Registration</button>
+    </div>
+    
+  </div>
+
+
+
 </div>
+
 
 <div>
   
