--- a/src/app/components/welcomepage/welcomepage.component.html
+++ b/src/app/components/welcomepage/welcomepage.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="space3"></div>
     <div>
-        <button class="button" onclick="location.href='/login'">Registration</button>
+        <button class="button" onclick="location.href='/registration'">Registration</button>
     </div>
     
   </div>
