--- a/src/app/components/registration/registration.component.scss
+++ b/src/app/components/registration/registration.component.scss
@@ -10,22 +10,20 @@ hr {
     margin-bottom: 25px;
   }
 
-.div1 {
-    display: inline-flex;
-    margin: 0.2cm 1cm 0cm 0cm;
+.div {
+    
+    margin: 0cm 0cm 0cm 0cm;
 }
 
-.div2 {
-    display: inline-flex;
-    margin: 0.1cm 1cm 0cm 0cm;
-}
 
 .text{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-bottom: 0em;
 }
 
 .poz{
     margin-left: 13cm;
+    margin-top: 1cm;
 }
 
 .submit{
@@ -34,7 +32,8 @@ hr {
     height: 40px;
     width: 130px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 0.7cm;
+    font-size: 0.5cm;
+    font-variant-position: initial;
 }
 
 .input{
