--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -46,7 +46,7 @@
       
     </div>
 
-    <input class="submit" type="submit" value="Register" (click)="register(); emailr.value=''; newPassr.value=''; repeatPassr.value=''; namer.value=''; surnamer.value=''; cityr.value=''; phoneNumr.value='' " >
+    <input class="submit" type="submit" value="Register" onclick="location.href='/login'" (click)="register(); emailr.value=''; newPassr.value=''; repeatPassr.value=''; namer.value=''; surnamer.value=''; cityr.value=''; phoneNumr.value='' " >
     
   </form>
 
