--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,9 @@
     <h1 class="header">Login</h1>
   </div>
 
-  <form (ngSubmit)="login">
+<hr>
+
+  <form>
   <div class="poz">
     <div class="div">
       <p class="Text">Email:</p>
