--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -23,7 +23,8 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 2.3em;
     margin-left: 17.8em;
-    margin-top: 2.7em;
+    margin-top: 2.0em;
+    margin-bottom: 1.4em;
 }
 
 .submit{
@@ -37,3 +38,8 @@
     width: 123px;
     margin-left: 2em;
 }
+
+hr {
+    border: 0.4px solid #f1f1f1;
+    margin-bottom: 25px;
+  }
