--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,7 @@
-<p>
-  dashboard works!
-</p>
+<h1>Dashboard</h1>
+<nav>
+    <a [routerLink]="['homepage']">homepage</a>
+
+</nav>
+
+<router-outlet></router-outlet>
