Tab in home page

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,19 @@
-<h1>Dashboard</h1>
-<nav>
-    <a [routerLink]="['homepage']">homepage</a>
+   
+   
+   <div class="tab">
 
-</nav>
+        <button class="dugme"><a [routerLink]="['homepage']" style='text-decoration:none;'>Home page</a></button>
+        <button class="dugme"><a [routerLink]="['cinemas']" style='text-decoration:none;'>Cinema</a></button>
+        <button class="dugme"><a [routerLink]="['cinemas']" style='text-decoration:none;'>Theatre</a></button>
+        <button class="dugme"><a [routerLink]="['cinemas']" style='text-decoration:none;'>Friends</a></button>
+        <button class="dugme"><a [routerLink]="['cinemas']" style='text-decoration:none;'>Reservation</a></button>
+        <button class="dugme"><a [routerLink]="['cinemas']" style='text-decoration:none;'>Setings</a></button>
+        <button class="dugme"><a [routerLink]="['cinemas']" style='text-decoration:none;'>Fan zone</a></button>
+        
+    </div>
+
+
+
+
 
 <router-outlet></router-outlet>
