--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,3 +1,5 @@
-<p>
-  homepage works!fffffffffffffffffffffffffffffffffffffffffff
-</p>
+<div class="body">
+
+  <p>Evo malo teksta u home page </p>
+
+</div>
