--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -18,7 +18,7 @@
     </div>
 
     <input class="submit" type="submit" value="Submit" (click)="login(); email1.value=''; password1.value=''">
-    <button class="button" onclick="location.href='/login'">Registration</button>
+    <button class="button" onclick="location.href='/registration'">Registration</button>
   </div>
   </form>
 
