--- a/src/app/components/registration/registration.component.scss
+++ b/src/app/components/registration/registration.component.scss
@@ -1,6 +1,6 @@
 .header{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin-left: 13.5cm;
+    margin-left: 16em;
     margin-top: 1cm;
     font-size: 1cm;
 }
@@ -22,12 +22,12 @@ hr {
 }
 
 .poz{
-    margin-left: 13cm;
+    margin-left: 35em;
     margin-top: 1cm;
 }
 
 .submit{
-    margin-left: 15cm;
+    margin-left: 33.5em;
     margin-top: 0.5cm;
     height: 40px;
     width: 130px;
