--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
         <button class="dugme"><a [routerLink]="['cinemas']" style='text-decoration:none;'>Friends</a></button>
         <button class="dugme"><a [routerLink]="['cinemas']" style='text-decoration:none;'>Reservation</a></button>
         <button class="dugme"><a [routerLink]="['cinemas']" style='text-decoration:none;'>Setings</a></button>
-        <button class="dugme"><a [routerLink]="['cinemas']" style='text-decoration:none;'>Fan zone</a></button>
+        <button class="dugme"><a [routerLink]="['fanzone']" style='text-decoration:none;'>Fan zone</a></button>
         
     </div>
 
