--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,10 +3,10 @@
    <div class="tab">
 
         <button class="dugme"><a [routerLink]="['homepage']" style='text-decoration:none;'>Home page</a></button>
-        <button class="dugme"><a [routerLink]="['cinemas']" style='text-decoration:none;'>Cinema</a></button>
+        <button class="dugme"><a [routerLink]="['cinemaslog']" style='text-decoration:none;'>Cinema</a></button>
         <button class="dugme"><a [routerLink]="['cinemas']" style='text-decoration:none;'>Theatre</a></button>
         <button class="dugme"><a [routerLink]="['cinemas']" style='text-decoration:none;'>Friends</a></button>
-        <button class="dugme"><a [routerLink]="['cinemas']" style='text-decoration:none;'>Reservation</a></button>
+        <button class="dugme"><a [routerLink]="['reservation']" style='text-decoration:none;'>Reservation</a></button>
         <button class="dugme"><a [routerLink]="['cinemas']" style='text-decoration:none;'>Setings</a></button>
         <button class="dugme"><a [routerLink]="['fanzone']" style='text-decoration:none;'>Fan zone</a></button>
         
