--- a/src/app/components/fanzone/fanzone.component.html
+++ b/src/app/components/fanzone/fanzone.component.html
@@ -31,6 +31,14 @@
   </div>
 
 
+  <div class="addTP">
+
+    <button class="btnadd" ><a [routerLink]="['../addthematicprops']" style='text-decoration:none;'>Add thematic props</a></button>
+
+
+
+  </div>
+
 
 </div>
 
