--- a/src/app/components/officialstore/officialstore.component.html
+++ b/src/app/components/officialstore/officialstore.component.html
@@ -12,7 +12,10 @@
       </div>
       
       <div class="column right">
-        <button name="dugmes">Reservation</button>
+
+        <button type="button"  id={{prop.id}} onclick="myButtonClicked(this)" (click)="reservingProps(prop.id)" >Reservation</button>
+        
+        
       </div>
 
 
