--- a/src/app/components/officialstore/officialstore.component.html
+++ b/src/app/components/officialstore/officialstore.component.html
@@ -7,8 +7,8 @@
     
       <div class="column left">Name: {{prop.name}}<br>
         Description: {{prop.description}}<br>
-        Price: {{prop.price}}
-
+        Price: {{prop.price}}<br>
+        Cinema/Theatre: {{prop.cinemaTheatre.name}}
       </div>
       
       <div class="column right">
