edit and remove thematic props

--- a/src/app/components/add-thematic-props/add-thematic-props.component.html
+++ b/src/app/components/add-thematic-props/add-thematic-props.component.html
@@ -2,7 +2,7 @@
 
 
     <div>
-        <h1 class="header">Thematic props</h1>
+        <h1 class="header">Add Thematic props</h1>
       </div>
       <hr>
 
