--- a/src/app/components/fanzone/fanzone.component.html
+++ b/src/app/components/fanzone/fanzone.component.html
@@ -34,7 +34,7 @@
   <div class="addTP">
 
     <button class="btnadd" ><a [routerLink]="['../addthematicprops']" style='text-decoration:none;'>Add thematic props</a></button>
-
+    <button class="btnadd" ><a [routerLink]="['../editthematicprops']" style='text-decoration:none'>Edit thematic props</a></button>
 
 
   </div>
