--- a/src/app/components/officialstore/officialstore.component.scss
+++ b/src/app/components/officialstore/officialstore.component.scss
@@ -28,3 +28,16 @@
     margin-top: 70px;
     margin-left: 20px;
 }
+
+.remove{
+    width: 1cm;
+    height: 1cm;
+    margin-left: 50px;
+    display: inline-block;
+    margin-top: 70px;
+}
+
+.btnremove{
+    margin-top: 10px;
+
+}
