--- a/src/app/components/cinemalog/cinemalog.component.scss
+++ b/src/app/components/cinemalog/cinemalog.component.scss
@@ -80,3 +80,14 @@ div.ex3 {
     width: 50px;
     height: 30px;
 }
+
+.buttons{
+    background-color: blueviolet;
+    width: 120px;
+    height: 120px;
+}
+
+.but{
+    width:30px;
+    height: 30px;
+}
