--- a/src/app/components/cinemalog/cinemalog.component.html
+++ b/src/app/components/cinemalog/cinemalog.component.html
@@ -63,7 +63,7 @@
           </div>       
           <div>
               <label class="label">Hall</label>
-              <input type="text" value="{{hall.id}}" class="in" disabled>
+              <input type="text" value="{{hall.ordinal}}" class="in" disabled>
                   
           </div>
           <div class="space1">  
