--- a/src/app/components/add-announcement/add-announcement.component.html
+++ b/src/app/components/add-announcement/add-announcement.component.html
@@ -34,7 +34,7 @@
           
         </div>
     
-        <input class="submit" type="submit" value="Ok" onclick="location.href='../dashboard/fanzone/announcement'" (click)="addannouncement(); namer.value=''; descriptionr.value=''; dater.value='';  " >
+        <input class="submit" type="submit" value="Ok"  (click)="addannouncement(); namer.value=''; descriptionr.value=''; dater.value='';  " >
         
       </form>
 
