--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
         <button class="dugme"><a [routerLink]="['cinemas']" style='text-decoration:none;'>Theatre</a></button>
         <button class="dugme"><a [routerLink]="['cinemas']" style='text-decoration:none;'>Friends</a></button>
         <button class="dugme"><a [routerLink]="['reservation']" style='text-decoration:none;'>Reservation</a></button>
-        <button class="dugme"><a [routerLink]="['cinemas']" style='text-decoration:none;'>Setings</a></button>
+        <button class="dugme"><a [routerLink]="['edituser']" style='text-decoration:none;'>Settings</a></button>
         <button class="dugme"><a [routerLink]="['fanzone']" style='text-decoration:none;'>Fan zone</a></button>
         
     </div>
