--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,5 +1,75 @@
-<div class="body">
+<div>
+    <div>
+        <h1 class="header">Home page</h1>
+    </div>
+    <hr>
 
-  <p>Evo malo teksta u home page </p>
+    <div class="row">
+
+      <div class="column left " style="background-color:#aaa;">
+
+        
+
+        <div>
+          <label class="label1">About user</label>
+          <div class="column ">
+            <img style="width: 150px;height: 130px;" src="http://www.clker.com/cliparts/n/l/p/q/K/L/blue-user-icon.svg" alt="">
+          </div>
+          <div class="space1">  
+          </div>
+          <div class="column">
+            <div>
+              
+              <label  class="label">Name</label>
+              
+              <input type="text" value="{{u.name}}" class="in" disabled>
+            </div>
+            <div class="space2"></div>
+            <div>
+                <label class="label">Surname</label>
+                <input type="text" value="{{u.surname}}" class="in" disabled>
+            </div>
+            <div class="space2"></div>
+            <div>
+                <label class="label">Email</label>
+                <input type="text" value="{{u.email}}" class="in" disabled>
+            </div>
+            <div class="space2"></div>
+            <div>
+                <label class="label">Phone number</label>
+                <input type="text" value="{{u.phoneNumber}}" class="in" disabled>
+            </div>
+            <div class="space2"></div>
+            <div>
+                <label class="label">City</label>
+                <input type="text" value="{{u.city}}" class="in" disabled>
+            </div>
+          </div>
+        </div>
+
+        
+      </div>
+
+      <div class="column space">
+
+      </div>
+
+      <div class="column right ex3" style="background-color:#bbb;">
+        
+            <label class="label2">History of visit</label>
+            <div class="visit">
+
+            </div>
+        
+
+      </div>
+
+
+
+
+
+    </div>
+
+  
 
 </div>
