--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -30,13 +30,20 @@
 .submit{
     width: 89px;
     height: 38px;
-    margin: 3.4em 0em 0em 43em;
+    margin-left: 31em;
+    margin-top: 2em;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 0.5cm;
+    
 }
 
 .button{
     height: 38px;
     width: 123px;
-    margin-left: 2em;
+    margin-left: 1.2em;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 0.5cm;
+    
 }
 
 hr {
