--- a/src/app/components/registration/registration.component.scss
+++ b/src/app/components/registration/registration.component.scss
@@ -27,8 +27,9 @@ hr {
 }
 
 .submit{
-    margin-left: 33.5em;
+    margin-left: 1em;
     margin-top: 0.5cm;
+    
     height: 40px;
     width: 130px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -39,4 +40,13 @@ hr {
 .input{
     height: 30px;
     width: 300px;
+}
+
+.button{
+    width: 100px;
+    height: 40px;
+    margin-left: 1.7em;
+    font-size: 0.5cm;
+    font-variant-position: initial;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
