--- a/src/app/components/announcement/announcement.component.scss
+++ b/src/app/components/announcement/announcement.component.scss
@@ -28,7 +28,7 @@
 .desni{
     width: 600px;
     display: inline-block;
-
+    margin-left: 70px;
     margin-top: 0px;
     height: 700px;
     vertical-align:top;
@@ -36,7 +36,7 @@
 }
 
 .announ{
-    width: 280px;
+    width: 260px;
     height: 100px;
     margin-top: 15px;
     margin-left: 0cm;
@@ -81,10 +81,10 @@ div.ex3 {
 
 .addB{
     
-    width: 600px;
+    width: 700px;
     height: 150px;
     background: blueviolet;
-
+    margin-left: 20px;
 }
 
 .btnaddbid{
@@ -101,5 +101,5 @@ div.ex3 {
 
 .ajdeBrate{
     margin-top: 30px;
-    
+    margin-left: 40px;
 }
