--- a/src/app/components/announcement/announcement.component.html
+++ b/src/app/components/announcement/announcement.component.html
@@ -18,8 +18,8 @@
       
 
       <div class="divBtn">
-        <button class="btnAdd" (click)="getAnnOfId(ann.id)" onclick="funkcijaDisabled()">Offer</button><br>
-         <button class="btnPreview" (click)="getBidsOfAnn(ann.id)">View bids</button>
+        <button class="btnAdd" (click)="getAnnOfId(ann.id)" (click)="getBidOfuserAndannouncement(ann.id)" onclick="funkcijaDisabled()">Offer</button><br>
+         <button class="btnPreview" (click)="getBidsOfAnn(ann.id)"  onclick="funkcijaDisabled1()">View bids</button>
        </div>  
      <hr>
     </ul>
@@ -32,7 +32,7 @@
       <div class="addB">
           <h3 align="center">Add bid on announcement</h3>
           <div class="disp">
-          <table style="width:60%" class="tableadd">
+          <table style="width:90%" class="tableadd">
               <tr >
                 <th align="left">Username</th>
                 <th align="left">Announcement</th> 
