--- a/src/app/components/edit-user/edit-user.component.html
+++ b/src/app/components/edit-user/edit-user.component.html
@@ -4,7 +4,115 @@
     </div>
     <hr>
 
-    
+    <div class="row">
+
+            <div class="column left " style="background-color:lightblue;">
+
+        
+
+                    <div>
+                      <label class="label1">Edit user information</label>
+                     
+                    
+                      <div class="space1">  
+                      </div>
+
+                      <form (ngSubmit)="register">
+                      <div class="column">
+                        <div>
+                          <label class="label">Email</label>
+                          <input type="text" [(ngModel)]="u.email" name="email" class="in" disabled>
+                        </div>
+                        <div class="space2"></div>
+                        <div>
+                          
+                          <label  class="label">Name</label>
+                          <input type="text" [(ngModel)]="u.name" name="name" class="in" >
+                        </div>
+                        <div class="space2"></div>
+                        <div>
+                            <label class="label">Surname</label>
+                            <input type="text" [(ngModel)]="u.surname" name="surname" class="in" >
+                        </div>
+                        <div class="space2"></div>
+                        
+                        <div>
+                            <label class="label">Phone number</label>
+                            <input type="text" [(ngModel)]="u.phoneNumber" name="phoneNumber" class="in" >
+                        </div>
+                        <div class="space2"></div>
+                        <div>
+                            <label class="label">City</label>
+                            <input type="text" [(ngModel)]="u.city" name="city" class="in" >
+                        </div>
+
+                        <input class="submit" type="submit"  value="Edit"   (click)="editUser()" >
+                      </div>
+
+                      
+                    </form>
+
+
+
+                    </div>
+            
+                    
+            </div>
+
+            <div class="column space">
+
+            </div>
+          
+            <div class="column right ex3" style="background-color:lightblue;">
+                  
+                <label class="label3">Edit password</label>
+                <div >
+                    
+                    <div class="space1">  
+                    </div>
+  
+                        <form (ngSubmit)="register">
+                        <div class="column">
+                          <div>
+                            <label class="label">Email</label>
+                            <input type="text" [(ngModel)]="u.email" name="email" class="in" disabled>
+                          </div>
+                          <div class="space2"></div>
+                          <div>
+                            
+                            <label  class="label">Current password</label>
+                            <input type="text" [(ngModel)]="pass" name="password" class="in" >
+                          </div>
+                          <div class="space2"></div>
+                          <div>
+                            
+                            <label  class="label">New password</label>
+                            <input type="text" [(ngModel)]="u.newPassword" name="newPassword" class="in" >
+                          </div>
+                          <div class="space2"></div>
+                          <div>
+                              <label class="label">Repeat password</label>
+                              <input type="text" [(ngModel)]="u.repeatPassword" name="repeatPassword" class="in" >
+                          </div>
+                          <div class="space2"></div>
+                          
+                          
+                          <input class="submit" type="submit"  value="Edit "   (click)="editPassword()" >
+                        </div>
+  
+                        
+                      </form>
+
+
+
+                    
+                </div>
+                  
+          
+            </div>
+
+
+    </div>
 
 
 
