--- a/src/app/components/edit-user/edit-user.component.scss
+++ b/src/app/components/edit-user/edit-user.component.scss
@@ -48,7 +48,7 @@ div.ex3 {
 .label{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 0.5cm;
-    margin-left: 1.8cm;
+    margin-left: 2.2cm;
 }
 
 .label1{
@@ -83,4 +83,21 @@ div.ex3 {
     background-color: burlywood;
     margin-top: 1cm;
     margin-left: 1cm;
+}
+
+.submit{
+    width: 110px;
+    height: 38px;
+    margin-left: 7em;
+    margin-top: 2em;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 0.5cm;
+    
+}
+
+.label3{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 0.5cm;
+    margin-left: 1cm;
+    margin-top: 7cm;
 }
