--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -84,7 +84,7 @@ div.ex3 {
 .visit{
     height: 300px;
     width: 250px;
-    background-color: burlywood;
+    background-color:white;
     margin-top: 1cm;
     margin-left: 1cm;
 }
