--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -17,7 +17,7 @@
       <input type="password" class="input" [(ngModel)]="userl.password" placeholder="Password" name="password" #password1 required>
     </div>
 
-    <input class="submit" type="submit" value="Submit" (click)="login(); email1.value=''; password1.value=''">
+    <input class="submit" type="submit" value="Login" (click)="login(); email1.value=''; password1.value=''">
     <button class="button" onclick="location.href='/registration'">Registration</button>
   </div>
   </form>
