--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -43,7 +43,7 @@
             <input class="input" type="text" [(ngModel)]="userr.phoneNumber"  placeholder="Phone number" name="phonenumber" #phoneNumr required>
           </div>
             
-          <input class="submit" type="submit" value="Submit" (click)="register(); emailr.value=''; newPassr.value=''; repeatPassr.value=''; namer.value=''; surnamer.value=''; cityr.value=''; phoneNumr.value='' " >
+          <input class="submit" type="submit" value="Register" (click)="register(); emailr.value=''; newPassr.value=''; repeatPassr.value=''; namer.value=''; surnamer.value=''; cityr.value=''; phoneNumr.value='' " >
           <button class="button" onclick="location.href='/login'">Login</button>
       
     </div>
