--- a/src/app/components/cinemalog/cinemalog.component.html
+++ b/src/app/components/cinemalog/cinemalog.component.html
@@ -7,7 +7,7 @@
   
 
     <div class="row">
-        <div class="column left ex3" style="background-color:#aaa;">
+        <div class="column left ex3" style="background-color:lightblue;">
             <table style="width:100%" class="table">
                 <tr >
                   <th align="left">Name</th>
@@ -29,7 +29,7 @@
         </div>
         <div class="column space">
         </div>
-        <div class="column right ex3" style="background-color:#bbb;">
+        <div class="column right ex3" style="background-color: lightblue;">
           <div>
             <label class="label">Projection</label>            
             <select id = "myList1" class="combobox" (change)="selectChangeHandler($event)" >
