--- a/src/app/components/cinemalog/cinemalog.component.scss
+++ b/src/app/components/cinemalog/cinemalog.component.scss
@@ -21,7 +21,7 @@ hr {
 
 .table{
     font-size: 0.6cm;
-    background-color: #22e6a4;
+    background-color: lightblue;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 18cm;
 }
