--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -6,7 +6,7 @@
 
     <div class="row">
 
-      <div class="column left " style="background-color:#aaa;">
+      <div class="column left " style="background-color:lightblue;">
 
         
 
@@ -54,7 +54,7 @@
 
       </div>
 
-      <div class="column right ex3" style="background-color:#bbb;">
+      <div class="column right ex3" style="background-color:lightblue;">
         
             <label class="label2">History of visit</label>
             <div class="visit">
